# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: main.cpp
assets/earth/: earth_normal_map.tga
assets/models/: Duck.gltf
benchmarks/: CMakeLists.txt  aabb.cpp  bvh.cpp  scene_traversal.cpp
docs/: Raytracer.wasm.map  Raytracer.worker.js  index.html
include/: aabb.h  bvh.h  camera.h  game.h  hit_record.h  input.h  mat3.h  mat4.h  material.h  object.h  pipeline.h  quat.h  ray.h  renderer.h  renderer_whitted.h  scene.h  scene_node.h  sdf.h  texture.h  ui.h  vec2.h  vec3.h  vec4.h  window.h
include/hittable/: aabb.h  functional_geometry.h  instance.h  line_segment.h  object.h  object_list.h  plane.h  point.h  sphere.h  triangle_mesh.h
include/materials/: dielectric.h  emissive.h  emissive_linear_drop_off.h  emissive_quadratic_drop_off.h  lambert.h  lambert_scatter.h  lambert_shadow_ray.h  material.h  metal.h
include/math/: bool_simd.h  float_simd.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec3_simd.h  vec4.h
src/: aabb.cpp  camera.cpp  game.cpp  input.cpp  main.cpp  object.cpp  pipeline.cpp  renderer.cpp  renderer_whitted.cpp  scene.cpp  scene_node.cpp  texture.cpp  ui.cpp  window.cpp
src/hittable/: aabb.cpp  functional_geometry.cpp  instance.cpp  line_segment.cpp  object_list.cpp  plane.cpp  point.cpp  sphere.cpp  triangle_mesh.cpp
src/materials/: dielectric.cpp  emissive.cpp  emissive_linear_drop_off.cpp  emissive_quadratic_drop_off.cpp  lambert.cpp  lambert_scatter.cpp  lambert_shadow_ray.cpp  metal.cpp
src/private_impl/graphics/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  indexed_mesh.cpp  indexed_mesh.h  scoped_debug_group.cpp  scoped_debug_group.h  texture.cpp  texture.h
src/private_impl/pipelines/: pipeline_raster_opengl.cpp  pipeline_raster_opengl.h
src/private_impl/renderers/: renderer_gpu.cpp  renderer_gpu.h  renderer_whitted.cpp  renderer_whitted.h
src/shaders/: bridging_header.h  bvh_node_t.h  gpu_1_raygen_fs.frag.glsl  gpu_2_layout.h  gpu_2_scene_traversal_fs.frag.glsl  gpu_2a_scene_traversal_sphere_fs.frag.glsl  gpu_2b_scene_traversal_plane_fs.frag.glsl  gpu_2c_scene_traversal_triangle_fs.frag.glsl  gpu_3a_closest_hit_fs.frag.glsl  gpu_3b_miss_all_fs.frag.glsl  gpu_3c_shadow_ray_light_hit_fs.frag.glsl  gpu_4_energy_accumulation_fs.frag.glsl  gpu_5_postprocess_fs.frag.glsl  hit_record_t.h  passthrough_flip_y_vs.vert.glsl  passthrough_vs.vert.glsl  plane_t.h  ray_t.h  sphere_t.h  triangle_t.h
